--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,4 +1,7 @@
 {
+  "rules": {
+    "selector-class-pattern": "^(?:(?:o|c|u|t|s|is|has|_|js|qa)-)?[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*(?:__[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*)?(?:--[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*)?(?:\\[.+\\])?$"
+  },
   "extends": [
     "stylelint-config-html/html",
     "stylelint-config-standard"
