--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "stylelint": "^14.14.1",
     "stylelint-config-html": "^1.1.0",
     "stylelint-config-standard": "^29.0.0",
+    "stylelint-selector-bem-pattern": "^2.1.1",
     "stylelint-webpack-plugin": "^3.3.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1",
-    "webpack-merge": "^5.8.0",
-    "stylelint-selector-bem-pattern": "^2.1.1"
+    "webpack-merge": "^5.8.0"
   }
 }
